# AudioCasting

./: .gitignore  AudioCast GUI.lnk  AudioCast GUI.py  AudioCast Server.lnk  AudioCast.lnk  DEVELOPMENT_PLAN.md  DEVELOPMENT_PROGRESS.md  FEATURE_IDEAS.md  audiocast.spec  build_installer.bat  connection_history.json  installer.iss  requirements.txt
.claude/: settings.local.json
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/audiocast/: MainActivity.kt
android/app/src/main/java/com/audiocast/audio/: AudioCaptureSource.kt  AudioEncoder.kt  AudioPlayer.kt  FlacDecoder.kt  JitterBuffer.kt  MicCapture.kt  OpusDecoder.kt  SyncPlayer.kt  SystemAudioCapture.kt
android/app/src/main/java/com/audiocast/data/: ProfileManager.kt
android/app/src/main/java/com/audiocast/network/: AudioClient.kt  AudioServer.kt  ClockSync.kt  Discovery.kt  MulticastReceiver.kt  NetworkChangeReceiver.kt  NetworkMonitor.kt  Protocol.kt  ServerDiscovery.kt
android/app/src/main/java/com/audiocast/service/: AudioCaptureService.kt  AudioService.kt
android/app/src/main/java/com/audiocast/ui/: MainScreen.kt
android/app/src/main/java/com/audiocast/ui/theme/: Theme.kt
android/app/src/main/java/com/audiocast/viewmodel/: MainViewModel.kt
android/app/src/main/java/com/devicelink/: MainActivity.kt
android/app/src/main/java/com/devicelink/audio/: AudioCaptureSource.kt  AudioEncoder.kt  AudioPlayer.kt  FlacDecoder.kt  JitterBuffer.kt  MicCapture.kt  OpusDecoder.kt  SyncPlayer.kt  SystemAudioCapture.kt
android/app/src/main/java/com/devicelink/data/: ProfileManager.kt
android/app/src/main/java/com/devicelink/network/: AudioClient.kt  AudioServer.kt  ClockSync.kt  Discovery.kt  MulticastReceiver.kt  NetworkChangeReceiver.kt  NetworkMonitor.kt  Protocol.kt  ServerDiscovery.kt
android/app/src/main/java/com/devicelink/service/: AudioCaptureService.kt  AudioService.kt  NotificationRelayService.kt
android/app/src/main/java/com/devicelink/ui/: ConnectedScreen.kt  DisconnectedScreen.kt  FileTransferPanel.kt  MainScreen.kt  MessagingPanel.kt  SenderScreen.kt  TouchpadScreen.kt
android/app/src/main/java/com/devicelink/ui/theme/: Theme.kt
android/app/src/main/java/com/devicelink/viewmodel/: MainViewModel.kt  MessagingManager.kt  SenderManager.kt  UiModels.kt
android/app/src/main/res/values/: strings.xml  themes.xml
scripts/: backfill.py
server/: Cargo.toml
server/src/: config.rs  decoder.rs  discovery.rs  encoder.rs  main.rs  protocol.rs  receiver.rs  server.rs  system_tray.rs  unified.rs  web_ui.rs
server/src/audio/: capture.rs  encoder.rs  mod.rs  playback.rs
server/src/network/: client_handler.rs  clock_sync.rs  discovery.rs  mod.rs  multicast.rs  receiver.rs  server.rs  state.rs
server/src/platform/: input.rs  mod.rs  notifications.rs
server/src/ui/: app.rs  chat.rs  dashboard.rs  files.rs  mod.rs  settings.rs
