[package]
name = "audiocast-server"
version = "0.1.0"
edition = "2021"
description = "AudioCasting PC Server - captures and streams system audio over LAN"

[dependencies]
# Opus encoding
opus = "0.3"

# Async runtime & networking
tokio = { version = "1", features = ["full"] }

# mDNS service discovery
mdns-sd = "0.11"

# Binary protocol helpers
byteorder = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# CLI arguments
clap = { version = "4", features = ["derive"] }

# Synchronization
parking_lot = "0.12"

# Serialization for control messages
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Unique IDs
uuid = { version = "1", features = ["v4"] }

# Time
chrono = "0.4"

# Web UI (Phase 4)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# FLAC encoding (pure Rust, no native deps)
flacenc = "0.4"

# Hostname detection
hostname = "0.4"

# Audio output for receiver mode
cpal = "0.15"

# FLAC decoding for receiver mode
claxon = "0.4"

# PIN/password hashing
sha2 = "0.10"
rand = "0.8"

# Process listing for per-app audio
sysinfo = "0.31"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }
